[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rand_core = "0.6.4"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
chacha20 = "0.9.1"
